--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang=fr>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="witdh=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>CV - Benjamin Picard</title>
 </head>
+
 <body>
     <form target="_blank" method="get" action="CV - Benjamin Picard.pdf">
         <button type="submit">Télécharger au format PDF</button>
@@ -15,14 +17,16 @@
             <div id="leftheader">
                 <h1>Benjamin Picard</h1>
                 <h3>Développeur Frontend - 24 ans</h3>
-                
             </div>
             <div id="rightheader">
                 <p>
-                    <i class="contact-icon">&#xe800; </i>+33 7 86 65 60 76<br/>
-                    <i class="contact-icon">&#xf0e0; </i><a href="mailto: benjamin.picard0@gmail.com" target="_blank">benjamin.picard0@gmail.com</a><br/>
-                    <i class="contact-icon">&#xf09b; </i><a href="https://github.com/BenjaminPcrd" target="_blank">/BenjaminPcrd</a><br/>
-                    <i class="contact-icon">&#xf30c; </i><a href="https://www.linkedin.com/in/benjaminpcrd/" target="_blank">/in/benjaminPcrd</a>
+                    <i class="contact-icon">&#xe800; </i>+33 7 86 65 60 76<br />
+                    <i class="contact-icon">&#xf0e0; </i><a href="mailto: benjamin.picard0@gmail.com"
+                        target="_blank">benjamin.picard0@gmail.com</a><br />
+                    <i class="contact-icon">&#xf09b; </i><a href="https://github.com/BenjaminPcrd"
+                        target="_blank">/BenjaminPcrd</a><br />
+                    <i class="contact-icon">&#xf30c; </i><a href="https://www.linkedin.com/in/benjaminpcrd/"
+                        target="_blank">/in/benjaminPcrd</a>
                 </p>
             </div>
         </div>
@@ -34,7 +38,8 @@
                     <span class="date">Novembre 2022 - en cours</span>
                     <h3>Développeur Frontend - Shaple <span class="light">Lyon (remote)</span></h3>
                     <p>
-                        Développement de l'outil "Backupta" (gestion de sauvegarde de configurations Okta)
+                        Développement de l'outil "Backupta" (gestion de sauvegarde de configurations et d'utilisateurs
+                        Okta)
                     </p>
                 </div>
 
@@ -50,8 +55,8 @@
                     <span class="date">Octobre 2019 - Avril 2020</span>
                     <h3>Assistant de projet <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
                     <p>
-                        Développement d'une application mobile au sein d’une équipe 
-                        <br><strong>Technologies : </strong>React-native, MongoDB et React.js
+                        Développement d'une application mobile au sein d’une équipe
+                        <br><strong>Technologies : </strong>React-native, MongoDB et React
                     </p>
                 </div>
 
@@ -59,7 +64,7 @@
                     <span class="date">Avril - Juin 2019</span>
                     <h3>Stage en entreprise <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
                     <p>
-                        Gestion de projet et développement d’applications mobile 
+                        Gestion de projet et développement d’applications mobile
                         <br><strong>Technologies : </strong>React-native, Expo
                     </p>
                 </div>
@@ -76,19 +81,21 @@
 
                 <div class="item">
                     <span class="date">2019 - 2020</span>
-                    <h3>Bachelor of Computer science <span class="light">Robert Gordon University, Aberdeen (UK)</span></h3>
+                    <h3>Bachelor of Computer science <span class="light">Robert Gordon University, Aberdeen (UK)</span>
+                    </h3>
                 </div>
 
                 <div class="item">
                     <span class="date">2017 - 2019</span>
                     <h3>DUT Informatique <span class="light">IUT de Clermont-Ferrand (63)</span></h3>
                 </div>
-                
+
                 <div class="item">
                     <span class="date">2016 - 2017</span>
                     <h3>Baccalauréat Scientifique <span class="light">Lycée Pierre-Caraminot, Égletons (19)</span></h3>
                     <p>
-                        Option Sciences de l’Ingénieur, spécialité Informatique et Sciences du Numérique. Mention assez bien
+                        Option Sciences de l’Ingénieur, spécialité Informatique et Sciences du Numérique. Mention assez
+                        bien
                     </p>
                 </div>
 
@@ -105,8 +112,9 @@
                 <div class="item">
                     <h3><a href="https://github.com/RGU-Computing/fitchat" target="_blank">FitChat</a></h3>
                     <p>
-                        Application mobile permettant d’aider les personnes ayant des douleurs chronique, à les soulager, 
-                        en leur proposant des exercices en fonction de leur activité. 
+                        Application mobile permettant d’aider les personnes ayant des douleurs chronique, à les
+                        soulager,
+                        en leur proposant des exercices en fonction de leur activité.
                         <br><strong>Technologies : </strong>React-native, Google Fit API, Dialogflow API, Firebase
                     </p>
                 </div>
@@ -114,15 +122,18 @@
                 <div class="item">
                     <h3><a href="https://github.com/BenjaminPcrd" target="_blank">Attendr App & Dashboard</a></h3>
                     <p>
-                        Applications mobile et interface web, permettant aux professeurs de gérer la présence des élèves en classe. 
-                        <br><strong>Technologies : </strong>React-native, React.js, MongoDb
+                        Applications mobile et interface web, permettant aux professeurs de gérer la présence des élèves
+                        en classe.
+                        <br><strong>Technologies : </strong>React-native, React, MongoDb
                     </p>
                 </div>
 
                 <div class="item">
-                    <h3><a href="https://github.com/BenjaminPcrd/TmdbSearchApp" target="_blank">TheMovieDB Search App</a></h3>
+                    <h3><a href="https://github.com/BenjaminPcrd/TmdbSearchApp" target="_blank">TheMovieDB Search
+                            App</a></h3>
                     <p>
-                        Application mobile utilisant l’API de themoviedb.org permettant d’afficher des informations sur les films et d’en rechercher. 
+                        Application mobile utilisant l’API de themoviedb.org permettant d’afficher des informations sur
+                        les films et d’en rechercher.
                         <br><strong>Technologies : </strong>React-native, Expo
                     </p>
                 </div>
@@ -141,15 +152,15 @@
                 <ul>
                     <li>Javascript & Typescript</li>
                     <li>React & React-native</li>
-                    <li>HTML, CSS, Bootstrap</li>
+                    <li>Bootstrap & Tailwind CSS</li>
                 </ul>
                 <h3>Outils & logiciels</h3>
                 <ul>
                     <li>Firebase</li>
+                    <li>AWS (Cognito, DynamoDB, S3, Lambda)</li>
                     <li>Git</li>
                     <li>Jira</li>
                     <li>Linux</li>
-                    <li>Visual Studio Code</li>
                 </ul>
 
                 <h2><i class="leftcol-icon">&#xf164; </i>CENTRES D’INTÉRÊT</h2>
@@ -163,4 +174,5 @@
         </div>
     </div>
 </body>
+
 </html>
